run_test(gf2x ${CMAKE_CURRENT_SOURCE_DIR}/test_gf2x.sh ${CADO_NFS_BINARY_DIR})
link_directories (${CADO_NFS_BINARY_DIR}/gf2x/.libs)
link_directories (${CADO_NFS_BINARY_DIR}/gf2x/gf2x-fft/.libs)
include_directories(${CADO_NFS_SOURCE_DIR}/gf2x/gf2x-fft)
add_executable(test_cantor test_cantor.c)
target_link_libraries(test_cantor gf2x-fft gf2x cantor128 tests)
target_link_libraries(test_cantor ${gmp_libname})
run_test(test_cantor test_cantor 100000)
